--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "gridfs-stream": "0.4.x",
     "stream-buffers": "0.2.x",
     "sendwithus": "2.1.x",
-    "aws-sdk": "~2.0.0",
+    "aws-sdk": "2.0.0-rc13",
     "bayesian-battle": "0.0.x",
     "redis": "",
     "webworker-threads": "~0.4.11",
